--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -35,6 +35,11 @@
     .feedback-container{
         width: 90%;
     }
+
+    
+    .timer-count-container i{
+        font-size: 1.6em;
+    }
 }
 
 @media screen and (max-width: 1280px){
@@ -53,6 +58,10 @@
 
     .livestream-info-container p{
         width: 80%;
+    }
+
+    .timer-count-container i{
+        font-size: 1.4em;
     }
 
 }
@@ -159,6 +168,10 @@
     .block-eventos{
         margin: 1rem auto 1rem auto;
     }
+
+    .timer-container{
+        width: 100%;
+    }
 }
 
 
@@ -204,6 +217,19 @@
     #hamburger-icon img{
         width: 45px;
         margin: 1em;
+    }
+
+    .timer-container{
+        flex-direction: column;
+    }
+
+    .timerimg-mask{
+        width: 100%;
+    }
+
+    .timer-count-container{
+        width: 100%;
+        padding: 1.5em 0 1.5em 0;
     }
 }
 
@@ -265,6 +291,14 @@
 
     .social-footer-container ul li{
         padding: .5em;
+    }
+
+    .timer-count-container i{
+        font-size: 1.3em;
+    }
+
+    .timer-count-container span{
+        padding:0 .5em 0 .5em;
     }
 }
 /* MOBILE RESOLUTION END */
