--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,319 +1,663 @@
 
 
+
+
 /* DESKTOP RESOLUTION */
 
 
+
+
+
 @media screen and (max-width:1600px){
+
     :root{
+
         --main-font-size-titles:32px;
+
         --main-font-size-smallTitles:20px;
+
         --main-font-size-middleTitles:25px;
+
         --main-font-size-verySmallTitles:14px;
+
         --main-font-size-paragraphs:19px;
+
         --main-font-size-smallParagraphs:12px;
 
+
+
         --main-width-eventos-container:350px;
+
         --main-height-eventos-image:200px;
 
+
+
     }
+
+
 
     .contain-titleWithBackground-container{
+
         width:80%;
+
     }
 
+
+
     .menu-container{
+
         width: 90%;
+
     }
+
 }
+
+
 
 @media screen and (max-width: 1440px){
 
+
+
     .eventos-container{
+
         width: 90%;
+
     }
+
+
 
     .contain-titleWithBackground-container{
+
         width:100%;
+
     }
+
+
 
     .feedback-container{
+
         width: 90%;
+
     }
+
+
+
 
 
     .timer-count-container i{
+
         font-size: 1.6em;
+
     }
 
 
+    .block-ticket{
+        height: 400px;
+    }
+    
+
+
 }
+
+
 
 @media screen and (max-width: 1280px){
+
     :root{
+
         --main-font-size-titles:28px;
+
         --main-font-size-smallTitles:18px;
+
         --main-font-size-middleTitles:23px;
+
         --main-font-size-verySmallTitles:13px;
+
         --main-font-size-paragraphs:15px;
+
         --main-font-size-smallParagraphs:12px;
+
     }
+
+
 
     .livestream-container{
+
         height: 350px;
+
     }
+
+
 
     .livestream-info-container p{
+
         width: 80%;
+
     }
+
+
 
     .timer-count-container i{
+
         font-size: 1.4em;
+
     }
 
+    .block-ticket{
+        height: 380px;
+    }
+
+
 }
+
+
 
 /* DESKTOP RESOLUTION END*/
 
 
+
+
+
 /* MOBILE RESOLUTION */
+
 @media screen and (max-width:768px){
+
     .mobile-menu-container{
+
         display: flex;
+
     }
+
+
 
     .menu-container{
+
         display: none;
+
     }
+
+
 
     #timerimg{
+
         width: 90%;
+
         margin: 2rem auto 1rem auto;
+
     }
+
+
 
     .header-tickets{
+
         height: 250px;
+
     }
+
+
 
     .header-tickets-info-container{
+
         width: 70%;
+
     }
+
+
 
     :root{
+
         --main-font-size-titles:22px;
+
         --main-font-size-smallTitles:14px;
+
         --main-font-size-middleTitles:18px;
+
         --main-font-size-verySmallTitles:14px;
+
         --main-font-size-paragraphs:14px;
+
         --main-font-size-smallParagraphs:13px;
+
     }
+
+
 
     .block-ticket{
-        width: 300px;
-        height: 250px;
+
+        width: 250px;
+
+        height: 350px;
+
     }
+
+
 
     .block-ticket img{
+
         width: 60%;
+
     }
+
+
 
     .livestream-container{
+
         flex-direction: column;
+
         height: 500px;
+
     }
+
+
 
     .livestream-info-container{
+
         width: 100%;
+
         padding: 3.5rem 0 3.5rem 0;
+
     }
+
+
 
     .livestreamimg-mask{
+
         width: 100%;
+
     }
+
+
 
     .feedback-block{
+
         margin: 2rem 0 2rem 0;
+
     }
+
+
 
     .footer-container{
+
         flex-direction: column;
+
         justify-content: center;
+
         align-items: center;
+
         padding: 3rem 0 3rem 0;
+
     }
+
+
 
     .info-footer-container{
+
         width: 90%;
+
     }
+
+
 
     .info-footer-container ul{
+
         flex-direction: row;
+
         justify-content: center;
+
         align-items: center;
+
         flex-wrap: nowrap;
+
     }
+
+
 
     .info-footer-container ul li{
+
         margin: auto;
+
         justify-content: center;
+
         flex-direction: column;
+
     }
+
+
 
     .info-footer-container ul li p{
+
         margin-top: .5em;
+
     }
+
+
 
     .social-footer-container{
+
         margin-top: 2rem;
+
     }
+
+
 
     .eventos-container{
+
         width: 100%;
+
         margin-bottom: 2rem;
+
     }
+
+
 
     .block-eventos{
+
         margin: 1rem auto 1rem auto;
+
     }
 
+
+
     .timer-container{
+
         width: 100%;
+
     }
+
 }
+
+
+
+
 
 
 
 @media screen and (max-width:500px){
+
     :root{
+
         --main-font-size-titles:18px;
+
         --main-font-size-smallTitles:14px;
+
         --main-font-size-middleTitles:16px;
+
         --main-font-size-verySmallTitles:12px;
+
         --main-font-size-paragraphs:12px;
+
         --main-font-size-smallParagraphs:10px;
+
+        --main-width-button:200px;
+
+        --main-height-button:60px;
     }
+
+
 
     #hero-image{
+
         display: block;
+
         width: 150%;
+
         margin: auto;
+
         transform: translateX(-20%);
+
     }
+
+
 
     #timerimg{
+
         width: 100%;
+
     }
+
+
 
     .header-tickets-info-container{
+
         width: 75%;
+
     }
+
+
 
     .info-footer-container ul{
+
         flex-direction: column;
+
     }
+
+
 
     .info-footer-container ul li{
+
         margin: 1em 0 1em 0;
+
     }
+
+
 
     .feedback-blocks-container{
+
         margin-top: 1rem;
+
         margin-bottom: 1rem;
+
     }
+
+
 
     #hamburger-icon img{
+
         width: 45px;
+
         margin: 1em;
+
     }
+
+
 
     .timer-container{
+
         flex-direction: column;
+
     }
+
+
 
     .timerimg-mask{
+
         width: 100%;
+
     }
+
+
 
     .timer-count-container{
+
         width: 100%;
+
         padding: 1.5em 0 1.5em 0;
+
     }
 
+
+
     .social-footer-container ul li a img{
+
         width: 40px;
+
     }
+
+
+    .block-ticket{
+        height: 300px;
+    }
+
+    .welcome-container{
+
+        width: 90%;
+
+    }
+
+    .absolute-button{
+        margin-bottom: 3em;
+    }
+
+
 }
+
+
 
 @media screen and (max-width:375px){
+
     :root{
+
         --main-font-size-titles:16px;
+
         --main-font-size-smallTitles:14px;
+
         --main-font-size-middleTitles:16px;
+
         --main-font-size-verySmallTitles:14px;
+
         --main-font-size-paragraphs:10px;
+
         --main-font-size-smallParagraphs:11px;
+
     }
+
+
 
     .livestream-info-container{
+
         padding: 1rem 0 2rem 0;
+
     }
+
+
 
     .livestream-container{
+
         margin: 0;
+
     }
+
+
 
     .mobile-menu-options ul li{
+
         width: 60%;
+
     }
+
+
 
     .header-tickets{
+
         height: 150px;
+
     }
+
+
 
     .info-titleWithBackground-container{
+
         padding: 2rem 0 2rem 0;
+
     }
+
+
 
     .contain-titleWithBackground-container{
+
         margin: .5em 0 .5em 0;
+
     }
+
+
 
     .eventos-info-container{
+
         margin: 0;
+
     }
+
 }
+
+
 
 @media screen and (max-width:360px){
+
     :root{
+
         --main-width-eventos-container:310px;
+
         --main-height-eventos-image:160px;
+
     }
+
+
 
     .social-footer-container ul li a img{
+
         width: 35px;
+
     }
+
 }
+
+
 
 @media screen and (max-width:320px){
+
     :root{
+
         --main-width-eventos-container:290px;
+
         --main-height-eventos-image:150px;
+
     }
+
+
 
     .social-footer-container ul li img{
+
         width: 40px;
+
     }
+
+
 
     .social-footer-container ul li{
+
         padding: .5em;
+
     }
+
+
 
     .timer-count-container i{
+
         font-size: 1.3em;
+
     }
+
+
 
     .timer-count-container span{
+
         padding:0 .5em 0 .5em;
+
     }
 
+
+
 }
+
 /* MOBILE RESOLUTION END */
+
