--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -282,7 +282,11 @@
         width: 100%;
 
     }
+    .livestreamimg-mask-video{
 
+      width: 100%;
+      height: 100%;
+    }
 
 
     .feedback-block{
@@ -314,7 +318,7 @@
         justify-content: start;
 
         flex-direction: column;
-        
+
         flex-wrap: nowrap;
 
     }
