--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1840,7 +1840,7 @@ ul{
 
 
     font-family: var(--font-family-light);
-    font-size: var(--main-font-size-paragraphs);
+    font-size: var(--main-font-size-middleTitles);
     color: var(--main-yellow-color);
     font-weight: bold;
     text-align: center;
@@ -1902,7 +1902,124 @@ ul{
 
     font-family: var(--font-family-bold);
     margin-bottom: 25px;
+}
+
+.box-premium-container{
+
+    display: flex;
+
+    flex-direction: row;
+
+    flex-wrap: nowrap;
+
+    width: 80%;
+
+    height: 500px;
+
+    overflow: visible;
+
+    margin: auto;
 
 }
+
+
+
+.box-premium-img-mask{
+
+    width: 50%;
+
+
+
+}
+
+
+
+.box-premium-img-mask img{
+
+    object-position: center;
+
+    object-fit: contain;
+
+    width: 100%;
+
+    height: 100%;
+
+
+
+}
+
+.box-premium-img-mask p{
+
+    object-position: center;
+
+    font-family: var(--font-family-regular);
+
+    font-size: var(--main-font-size-paragraphs);
+
+    width: 100%;
+
+    text-align: center;
+
+
+
+
+}
+
+
+
+
+.box-premium-info-container{
+
+    width: 50%;
+
+    display: flex;
+
+    flex-direction: column;
+
+    justify-content: center;
+
+    align-items: center;
+
+}
+
+
+
+.box-premium-info-container h2, .box-premium-info-container p{
+
+    margin: 1rem 0 1rem 0;
+
+}
+
+
+
+.box-premium-info-container h2{
+
+    font-family: var(--font-family-bold);
+
+    color: var(--main-red-color);
+
+    font-size: var(--main-font-size-titles);
+
+}
+.box-premium-info-container ul{
+
+    list-style-type:  disc;
+
+}
+
+.box-premium-info-container li{
+
+    font-family: var(--font-family-regular);
+
+    font-size: var(--main-font-size-paragraphs);
+
+    width: 100%;
+
+    text-align: justify;
+
+}
+
+
+
 
 /*END Ajustes OCT-28 */
